# OrderService/src/main/resources/api.yaml
@@ -7,6 +7,8 @@ basePath: /v2/api/restaurant
 tags:
   - name: order
     description: Restaurant Orders
+  - name: orderSaga
+    description: Restaurant Orders Saga
 schemes:
   - https
   - http
@@ -15,10 +17,52 @@ consumes:
 produces:
   - application/json
 paths:
-  /orders:
+  /order-sagas:
     get:
       tags:
         - order
+      summary: Queries Order Sagas
+      description: 'Queries restaurant Orders'
+      operationId: getOrderSagas
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/OrderSaga'
+        '400':
+          description: Invalid Order
+          schema:
+            $ref: '#/definitions/Error'
+        '401':
+          description: Invalid Order
+          schema:
+            $ref: '#/definitions/Error'
+        '403':
+          description: Invalid Order
+          schema:
+            $ref: '#/definitions/Error'
+        '404':
+          description: Invalid Order
+          schema:
+            $ref: '#/definitions/Error'
+        '412':
+          description: Invalid Order
+          schema:
+            $ref: '#/definitions/Error'
+        '500':
+          description: Invalid Order
+          schema:
+            $ref: '#/definitions/Error'
+        '503':
+          description: Invalid Order
+          schema:
+            $ref: '#/definitions/Error'
+  /orders:
+    get:
+      tags:
+        - orderSaga
       summary: Queries restaurant Orders
       description: 'Queries restaurant Orders'
       operationId: getOrders
@@ -244,6 +288,20 @@ paths:
           schema:
             $ref: '#/definitions/Error'
 definitions:
+  OrderSaga:
+    required:
+      - id
+      - orderId
+      - status
+    properties:
+      id:
+        type: integer
+        format: int64
+      orderId:
+        type: integer
+        format: int64
+      status:
+        type: string
   OrderData:
     type: object
     required:
